@@ -30,7 +30,6 @@
 #include <libxml/xmlschemas.h>
 #include "qof.h"
 #include "qof-backend-qsf.h"
-#include "qsf-dir.h"
 #include "qsf-xml.h"
 
 static QofLogModule log_module = QOF_MOD_QSF;
